--- a/前端/html+css/品优购项目/index.html
+++ b/前端/html+css/品优购项目/index.html
@@ -1,1 +1,443 @@
+<!DOCTYPE html>
+<html lang="zh-CN">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>品优购-正品低价、品质保障、配送及时、轻松购物！</title>
+    <meta name="description"
+        content="品优购-专业的综合网上购物商城，为您提供正品低价的购物选择、优质便捷的服务体验。商品来自全球数十万品牌商家，囊括家电、手机、电脑、服装、居家、母婴、美妆、个护、食品、生鲜等丰富品类，满足各种购物需求。" />
+    <meta name="Keywords" content="网上购物,网上商城,家电,手机,电脑,服装,居家,母婴,美妆,个护,食品,生鲜,品优购" />
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+</head>
+
+<body>
+    <section class="shortcut">
+        <div class="w">
+            <div class="fl">
+                <ul>
+                    <li>品优购欢迎您！&nbsp;</li>
+                    <li><a href="#">请登录</a> &nbsp; <a href="register.html" class="style_red">免费注册</a></li>
+                </ul>
+            </div>
+            <div class="fr">
+                <ul>
+                    <li><a href="#">我的订单</a></li>
+                    <li></li>
+                    <li class="arrow-icon"><a href="#">我的品优购</a></li>
+                    <li></li>
+                    <li><a href="#">品优购会员</a></li>
+                    <li></li>
+                    <li><a href="#">企业采购</a></li>
+                    <li></li>
+                    <li class="arrow-icon"><a href="#">关注品优购</a></li>
+                    <li></li>
+                    <li class="arrow-icon"><a href="#">客户服务</a></li>
+                    <li></li>
+                    <li class="arrow-icon"><a href="#">网站导航</a></li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <header class="header w">
+        <div class="logo">
+            <h1>
+                <a href="index.html" title="品优购商城">品优购</a>
+            </h1>
+        </div>
+        <div class="search">
+            <input type="search" name="" id="" placeholder="语言开发">
+            <button>搜索</button>
+        </div>
+        <div class="hotwords">
+            <a href="#">优惠购首发</a>
+            <a href="#">亿元优惠</a>
+            <a href="#">9.9元团购</a>
+            <a href="#">美满99减30</a>
+            <a href="#">办公用品</a>
+            <a href="#">电脑</a>
+            <a href="#">通信</a>
+        </div>
+        <div class="shopcar">
+            我的购物车
+            <i class="count">8</i>
+        </div>
+    </header>
+    <nav class="nav">
+        <div class="w">
+            <div class="dropdown">
+                <div class="dt">全部商品分类</div>
+                <div class="dd">
+                    <ul>
+                        <li><a href="#">家用电器</a></li>
+                        <li><a href="list.html">手机、数码、通信</a></li>
+                        <li><a href="#">电脑、办公</a></li>
+                        <li><a href="#">家居、家具、家装、厨具</a></li>
+                        <li><a href="#">男装、女装、童装、内衣</a></li>
+                        <li><a href="#">个户化妆、清洁用品、宠物</a></li>
+                        <li><a href="#">鞋靴、箱包、珠宝、奢侈品</a></li>
+                        <li><a href="#">运动户外、钟表</a></li>
+                        <li><a href="#">汽车、汽车用品</a></li>
+                        <li><a href="#">母婴、玩具乐器</a></li>
+                        <li><a href="#">食品、酒类、生鲜、特产</a></li>
+                        <li><a href="#">医药保健</a></li>
+                        <li><a href="#">图书、音像、电子书</a></li>
+                        <li><a href="#">彩票、旅行、充值、票务</a></li>
+                        <li><a href="#">理财、众筹、白条、保险</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="navitems">
+                <ul>
+                    <li><a href="#">服装城</a></li>
+                    <li><a href="#">美妆馆</a></li>
+                    <li><a href="#">传智超市</a></li>
+                    <li><a href="#">全球购</a></li>
+                    <li><a href="#">闪购</a></li>
+                    <li><a href="#">团购</a></li>
+                    <li><a href="#">拍卖</a></li>
+                    <li><a href="#">有趣</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="w">
+        <div class="main">
+            <div class="focus">
+                <ul>
+                    <li><img src="upload/focus1.png" alt=""></li>
+                </ul>
+            </div>
+            <div class="newsflash">
+                <div class="news">
+                    <div class="news-hd">
+                        <h5>品优购快报</h5>
+                        <a href="#" class="more">更多</a>
+                    </div>
+                    <div class="news-bd">
+                        <ul>
+                            <li><a href="#"><strong>[热评]</strong>超高贴合放肆运动,上手Jabra真无线耳机123</a></li>
+                            <li><a href="#"><strong>[HOT]</strong>国货之光电动牙刷篇,用心打造牙齿守护神123</a></li>
+                            <li><a href="#"><strong>[热门]</strong>阿芙神采美目复方油——紧实淡纹小熨斗123</a></li>
+                            <li><a href="#"><strong>[热评]</strong>施华洛世奇,设计将爱蕴藏其中，尽显“爱她”的满满诚意</a></li>
+                            <li><a href="#"><strong>[热评]</strong>>超高贴合放肆运动,上手Jabra真123</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="lifeservice">
+                    <ul>
+                        <li>
+                            <i class="phone"></i>
+                            <p>话费</p>
+                        </li>
+                        <li>
+                            <i class="plane"></i>
+                            <p>飞机</p>
+                        </li>
+                        <li>
+                            <i class="phone"></i>
+                            <p>话费</p>
+                        </li>
+                        <li>
+                            <i class="plane"></i>
+                            <p>飞机</p>
+                        <li>
+                            <i class="phone"></i>
+                            <p>话费</p>
+                        </li>
+                        <li>
+                            <i class="plane"></i>
+                            <p>飞机</p>
+                        <li>
+                            <i class="phone"></i>
+                            <p>话费</p>
+                        </li>
+                        <li>
+                            <i class="plane"></i>
+                            <p>飞机</p>
+                        <li>
+                            <i class="phone"></i>
+                            <p>话费</p>
+                        </li>
+                        <li>
+                            <i class="plane"></i>
+                            <p>飞机</p>
+                        <li>
+                            <i class="phone"></i>
+                            <p>话费</p>
+                        </li>
+                        <li>
+                            <i class="plane"></i>
+                            <p>飞机</p>
+                    </ul>
+                </div>
+                <div class="bargain">
+                    <img src="upload/bargain.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="recommend w">
+        <div class="recom-hd">
+            <img src="images/recom.png" alt="">
+        </div>
+        <div class="recom-bd">
+            <ul>
+                <li><img src="images/recom_03.jpg"></li>
+                <li><img src="images/recom_03.jpg"></li>
+                <li><img src="images/recom_03.jpg"></li>
+                <li><img src="images/recom_03.jpg"></li>
+            </ul>
+        </div>
+    </div>
+    <div class="fonds w">
+        <div class="fonds-hd">
+            <h5>猜你喜欢</h5>
+            <span>换一换</span>
+        </div>
+        <div class="fonds-bd">
+            <ul>
+                <li>
+                    <img src="images/猜你喜欢.png">
+                    <h5><a href="#">阳光美包新款单肩包女包时尚子母包四件套女</a></h5>
+                    <p>¥ <span>116.00</span></p>
+                </li>
+                <li>
+                    <img src="images/猜你喜欢.png">
+                    <h5><a href="#">阳光美包新款单肩包女包时尚子母包四件套女</a></h5>
+                    <p>¥ <span>116.00</span></p>
+                </li>
+                <li>
+                    <img src="images/猜你喜欢.png">
+                    <h5><a href="#">阳光美包新款单肩包女包时尚子母包四件套女</a></h5>
+                    <p>¥ <span>116.00</span></p>
+                </li>
+                <li>
+                    <img src="images/猜你喜欢.png">
+                    <h5><a href="#">阳光美包新款单肩包女包时尚子母包四件套女</a></h5>
+                    <p>¥ <span>116.00</span></p>
+                </li>
+                <li>
+                    <img src="images/猜你喜欢.png">
+                    <h5><a href="#">阳光美包新款单肩包女包时尚子母包四件套女</a></h5>
+                    <p>¥ <span>116.00</span></p>
+                </li>
+                <li>
+                    <img src="images/猜你喜欢.png">
+                    <h5><a href="#">阳光美包新款单肩包女包时尚子母包四件套女</a></h5>
+                    <p>¥ <span>116.00</span></p>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="floor">
+        <div class="jiadian w">
+            <div class="box-hd">
+                <h3>家用电器</h3>
+                <div class="tablist">
+                    <ul>
+                        <li><a href="#" class="style_red">热门</a></li>
+                        <li><a href="#">大家电门</a></li>
+                        <li><a href="#">生活电器</a></li>
+                        <li><a href="#">厨房电器</a></li>
+                        <li><a href="#">个护健康</a></li>
+                        <li><a href="#">应季电器</a></li>
+                        <li><a href="#">空气/净水</a></li>
+                        <li><a href="#">新奇特</a></li>
+                        <li><a href="#">高端电器</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="box-bd">
+                <div class="table_content">
+                    <div class="table_list_item">
+                        <div class="col_210">
+                            <ul>
+                                <li><a href="#">节能补贴</a></li>
+                                <li><a href="#">节能补贴</a></li>
+                                <li><a href="#">节能补贴</a></li>
+                                <li><a href="#">节能补贴</a></li>
+                                <li><a href="#">节能补贴</a></li>
+                                <li><a href="#">节能补贴</a></li>
+                            </ul>
+                            <a href="#"><img src="images/floor-1-1.png" alt=""></a>
+                        </div>
+                        <div class="col_329">
+                            <a href="#"><img src="images/floor-1-b01.png" alt=""></a>
+                        </div>
+                        <div class="col_221">
+                            <a href="#" class="bb"><img src="images/floor-1-2.png" alt=""></a>
+                            <a href="#"><img src="images/floor-1-3.png" alt=""></a>
+                        </div>
+                        <div class="col_221">
+                            <a href="#"><img src="images/floor-1-4.png" alt=""></a>
+                        </div>
+                        <div class="col_219">
+                            <a href="#" class="bb"><img src="images/floor-1-5.png" alt=""></a>
+                            <a href="#"><img src="images/floor-1-6.png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="shouji w">
+            <div class="box-hd">
+                <h3>手机通讯</h3>
+                <div class="tablist">
+                    <ul>
+                        <li><a href="#" class="style_red">热门</a></li>
+                        <li><a href="#">大家电门</a></li>
+                        <li><a href="#">生活电器</a></li>
+                        <li><a href="#">厨房电器</a></li>
+                        <li><a href="#">个护健康</a></li>
+                        <li><a href="#">应季电器</a></li>
+                        <li><a href="#">空气/净水</a></li>
+                        <li><a href="#">新奇特</a></li>
+                        <li><a href="#">高端电器</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="box-bd">
+                <div class="table_content">
+                    <div class="table_list_item">
+                        <div class="col_210">
+                            <ul>
+                                <li><a href="#">节能补贴</a></li>
+                                <li><a href="#">节能补贴</a></li>
+                                <li><a href="#">节能补贴</a></li>
+                                <li><a href="#">节能补贴</a></li>
+                                <li><a href="#">节能补贴</a></li>
+                                <li><a href="#">节能补贴</a></li>
+                            </ul>
+                            <a href="#"><img src="images/floor-1-1.png" alt=""></a>
+                        </div>
+                        <div class="col_329">
+                            <a href="#"><img src="images/floor-1-b01.png" alt=""></a>
+                        </div>
+                        <div class="col_221">
+                            <a href="#" class="bb"><img src="images/floor-1-2.png" alt=""></a>
+                            <a href="#"><img src="images/floor-1-3.png" alt=""></a>
+                        </div>
+                        <div class="col_221">
+                            <a href="#"><img src="images/floor-1-4.png" alt=""></a>
+                        </div>
+                        <div class="col_219">
+                            <a href="#" class="bb"><img src="images/floor-1-5.png" alt=""></a>
+                            <a href="#"><img src="images/floor-1-6.png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="footer">
+        <div class="w">
+            <div class="modservice">
+                <ul>
+                    <li>
+                        <h5 class="one"></h5>
+                        <div class="service-txt">
+                            <h4>正品保障</h4>
+                            <p>正品保障，提供发票</p>
+                        </div>
+                    </li>
+                    <li>
+                        <h5 class="two"></h5>
+                        <div class="service-txt">
+                            <h4>极速物流</h4>
+                            <p>急速物流，急速送达</p>
+                        </div>
+                    </li>
+                    <li>
+                        <h5 class="three"></h5>
+                        <div class="service-txt">
+                            <h4>无忧售后</h4>
+                            <p>七天无理由退换货</p>
+                        </div>
+                    </li>
+                    <li>
+                        <h5 class="four"></h5>
+                        <div class="service-txt">
+                            <h4>特色服务</h4>
+                            <p>私人订制套餐</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="modhelp">
+                <dl>
+                    <dt>服务指南</dt>
+                    <dd><a href="#">购物流程</a></dd>
+                    <dd><a href="#">会员介绍</a></dd>
+                    <dd><a href="#">生活旅行/团购</a></dd>
+                    <dd><a href="#">常见问题</a></dd>
+                    <dd><a href="#">大家电</a></dd>
+                    <dd><a href="#">联系客服</a></dd>
+                </dl>
+                <dl>
+                    <dt>服务指南</dt>
+                    <dd><a href="#">购物流程</a></dd>
+                    <dd><a href="#">会员介绍</a></dd>
+                    <dd><a href="#">生活旅行/团购</a></dd>
+                    <dd><a href="#">常见问题</a></dd>
+                    <dd><a href="#">大家电</a></dd>
+                    <dd><a href="#">联系客服</a></dd>
+                </dl>
+                <dl>
+                    <dt>服务指南</dt>
+                    <dd><a href="#">购物流程</a></dd>
+                    <dd><a href="#">会员介绍</a></dd>
+                    <dd><a href="#">生活旅行/团购</a></dd>
+                    <dd><a href="#">常见问题</a></dd>
+                    <dd><a href="#">大家电</a></dd>
+                    <dd><a href="#">联系客服</a></dd>
+                </dl>
+                <dl>
+                    <dt>服务指南</dt>
+                    <dd><a href="#">购物流程</a></dd>
+                    <dd><a href="#">会员介绍</a></dd>
+                    <dd><a href="#">生活旅行/团购</a></dd>
+                    <dd><a href="#">常见问题</a></dd>
+                    <dd><a href="#">大家电</a></dd>
+                    <dd><a href="#">联系客服</a></dd>
+                </dl>
+                <dl>
+                    <dt>帮助中心</dt>
+                    <dd><a href="#">购物流程</a></dd>
+                    <dd><a href="#">会员介绍</a></dd>
+                    <dd><a href="#">生活旅行/团购</a></dd>
+                    <dd><a href="#">常见问题</a></dd>
+                    <dd><a href="#">大家电</a></dd>
+                    <dd><a href="#">联系客服</a></dd>
+                </dl>
+                <dl>
+                    <dt>服务指南</dt>
+                    <dd>
+                        <img src="images/wx_cz.jpg">
+                        品优购客户端
+                    </dd>
+                </dl>
+            </div>
+            <div class="modcopyright">
+                <div class="links">
+                    <ul>
+                        <a href="#">关于我们</a> | <a href="#">联系我们</a></li> | <a href="#">联系客服</a> | <a href="#">商家入驻</a> |
+                        <a href="#">营销中心</a> | <a href="#">手机品优购</a> | <a href="#">友情链接</a> | <a href="#">销售联盟</a> | <a
+                            href="#">品优购社区</a> | <a href="#">品优购公益</a> | <a href="#">English Site</a> | <a
+                            href="#">Contact U</a></li>
+                    </ul>
+                </div>
+                <div class="copyright">
+                    地址:北京市昌平区建材城西路金燕龙办公楼一层 邮编:100096 电话:400-618-4000 传真:010-82935100 邮箱: zhanghj+itcast.cn<br>
+                    京ICP备08001421号京公网安备110108007702
+                </div>
+            </div>
+        </div>
+    </footer>
+</body>
+
+</html>
